# neoc-assistant

./: .env.example  .env.optimized  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  check_status.bat  dev_tools.bat  docker-compose.yml  help.bat  k8s-deployment.yml  main.py  mkdocs.yml  pyproject.toml  quick_start.bat  requirements-dev.txt  run_neoc_assistant.bat  run_tests.bat  setup_neoc_assistant.bat  test_api.py  test_app.py  test_chat.py  test_docs.py  test_llm.py  test_rag.py  test_server.py
.github/workflows/: cd.yml  ci.yml
docs/: citation-standards.md  index.md  installation.md
docs/api/: chat.md  documents.md  health.md
docs/architecture/: components.md  overview.md  performance.md
docs/development/: code-quality.md  contributing.md  testing.md
models/: crewai_agents.py
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  grafana-dashboard.json  prometheus.yml
scripts/: demo.py  deploy.sh  dev.py  performance_tune.py  quick_test.py  setup.sh  test_citations.py  test_disaster_expertise.py  test_functionality.py  uat_validation.py
src/: __init__.py
src/neoc_assistant/: __init__.py  app.py  config.py  document_processor.py  llm_service.py  monitoring.py  rag_pipeline.py  security.py
src/neoc_assistant/routers/: chat.py  documents.py
static/: index.html  script.js  styles.css
tests/: test_chatbot.py  test_document_processor.py  test_integration.py  test_rag_pipeline.py  test_ui.py
tests/manual/: __init__.py
